# obs-ms-kit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRANSLATIONS.md  buildspec.json  config-dialog.cpp  config-dialog.hpp  config-utils.cpp  multistream.cpp  multistream.hpp  output-dialog.cpp  output-dialog.hpp  resource.rc.in  resources.qrc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: build-macos
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  ci.yml  release.yml
cmake/common/: bootstrap.cmake
cmake/macos/: xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in
docs/adr/: ADR-001-plugin-first.md  ADR-002-outputnode.md  ADR-003-control-plane.md  ADR-004-network-buffer.md  ADR-005-render-once.md  ADR-006-output-state-machine.md  ADR-007-performance-budget.md  ADR-008-dependency-direction.md  ADR-009-configuration-management.md  ADR-010-upstream-sync-strategy.md
docs/architecture/: non-functional.md  overview.md  threading.md
runtime/engine/analytics/: PerformanceRuleEngine.cpp  PerformanceRuleEngine.hpp
runtime/engine/config/: OutputConfig.hpp  OutputProfile.hpp
runtime/engine/encoder/: EncoderInstance.cpp  EncoderInstance.hpp  IEncoderInstance.hpp
runtime/engine/network/: NetworkBuffer.cpp  NetworkBuffer.hpp
runtime/engine/output/: HealthMonitor.cpp  HealthMonitor.hpp  IOutputNode.hpp  IOutputSession.hpp  OutputController.cpp  OutputController.hpp  OutputRegistry.hpp  OutputRuntimeState.hpp  OutputSession.cpp  OutputSession.hpp  ReconnectPolicy.cpp  ReconnectPolicy.hpp
runtime/engine/protocol/: IProtocolClient.hpp  RtmpClient.cpp  RtmpClient.hpp  SrtClient.cpp  SrtClient.hpp  WhipClient.cpp  WhipClient.hpp
runtime/engine/video/: FrameDistributor.cpp  FrameDistributor.hpp  IScaler.hpp  Scaler.cpp  Scaler.hpp
runtime/kernel/: ConfigManager.cpp  ConfigManager.hpp  EventDispatcher.cpp  EventDispatcher.hpp  IConfigManager.hpp  IEventDispatcher.hpp  IKernelContext.hpp  ILogger.hpp  IScheduler.hpp  IService.hpp  IServiceRegistry.hpp  KernelContext.cpp  KernelContext.hpp  Scheduler.cpp  Scheduler.hpp  ServiceRegistry.hpp
runtime/test/: MockOutputSession.hpp  PerformanceRuleTestHarness.cpp  PerformanceRuleTestHarness.hpp
runtime/ui/: AddDestinationDialog.cpp  AddDestinationDialog.hpp  CreatorHubWidget.cpp  CreatorHubWidget.hpp
